[package]
name = "vsh"
version = "0.1.0"
edition = "2021"
authors = ["Meet Vasani"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
prettytable-rs = "0.10.0"
